<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableRow
        android:layout_weight="1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:text="@string/clear"
            android:textSize="40sp"
            android:textColor="@color/colorDelete"
            android:onClick="onNonNumpadButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/delete"
            android:textSize="40sp"
            android:textColor="@color/colorDelete"
            android:layout_width="0dp"
            android:onClick="onNonNumpadButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/lbracket"
            android:textColor="@color/colorOperands"
            android:textSize="50sp"
            android:layout_width="0dp"
            android:onClick="onNonNumpadButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/rbracket"
            android:textSize="50sp"
            android:textColor="@color/colorOperands"
            android:onClick="onNonNumpadButtonClick"
            android:layout_width="0dp"
            android:background="@drawable/bg_ripple"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_weight="1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/seven"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:layout_width="0dp"
            android:onClick="onSevenButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/eight"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:onClick="onEightButtonClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/nine"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:onClick="onNineButtonClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/subtract"
            android:textSize="50sp"
            android:textColor="@color/colorOperands"
            android:onClick="onNonNumpadButtonClick"
            android:layout_width="0dp"
            android:background="@drawable/bg_ripple"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_weight="1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/four"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:onClick="onFourButtonClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/five"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:layout_width="0dp"
            android:onClick="onFiveButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/six"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:layout_width="0dp"
            android:onClick="onSixButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/multiply"
            android:textSize="50sp"
            android:onClick="onNonNumpadButtonClick"
            android:textColor="@color/colorOperands"
            android:layout_width="0dp"
            android:background="@drawable/bg_ripple"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_weight="1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/one"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:layout_width="0dp"
            android:onClick="onOneButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/two"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:layout_width="0dp"
            android:onClick="onTwoButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/three"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:layout_width="0dp"
            android:onClick="onThreeButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/divide"
            android:textSize="50sp"
            android:onClick="onNonNumpadButtonClick"
            android:textColor="@color/colorOperands"
            android:layout_width="0dp"
            android:background="@drawable/bg_ripple"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_weight="1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/decimal"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:onClick="onDecimalButtonClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/zero"
            android:textSize="40sp"
            android:textColor="@color/colorNumpad"
            android:onClick="onZeroButtonClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/equals"
            android:textSize="50sp"
            android:layout_width="0dp"
            android:onClick="onNonNumpadButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/add"
            android:textSize="50sp"
            android:textColor="@color/colorOperands"
            android:onClick="onNonNumpadButtonClick"
            android:layout_width="0dp"
            android:background="@drawable/bg_ripple"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>